[package]
name = "zyst"
version = "1.1.0"
description = "Redis-compatible server"
edition = "2021"
authors = ["Pierre-Henri Bourdeau <phbasic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bourdeau/zyst/"
repository = "https://github.com/bourdeau/zyst/"
license = "Apache-2.0"
publish = true

[badges]
maintenance = { status = "actively-developed" }

[categories]
categories = ["database", "network-programming", "asynchronous", "data-structures", "caching"]

[keywords]
keywords = ["redis", "database", "key-value-store", "server", "async", "networking", "caching", "nosql", "performance", "low-latency"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
config = "0.15.13"
dirs = "6.0.0"
indexmap = "2.10.0"
once_cell = "1.21.3"
regex = "1.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_futures"] }
redis = { version = "0.32.4", features = ["disable-client-setinfo"] }

[[bench]]
name = "my_benchmark"
harness = false
